// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Flow Direction Link component should render disabled when isDisabled is passed 1`] = `
<FlowDirectionLink
  action="/SOME/URL"
  caseId="caseId123"
  disabled={true}
  dispatch={[MockFunction]}
  flowDirection="back"
  history={Object {}}
  label="Update"
  stageId="stageId123"
>
  <p>
    <Link
      className="govuk-body govuk-link"
      disabled={true}
      onClick={[Function]}
      to="/SOME/URL"
    >
      <LinkAnchor
        className="govuk-body govuk-link"
        disabled={true}
        href="/SOME/URL"
        navigate={[Function]}
        onClick={[Function]}
      >
        <a
          className="govuk-body govuk-link"
          disabled={true}
          href="/SOME/URL"
          onClick={[Function]}
        >
          Update
        </a>
      </LinkAnchor>
    </Link>
  </p>
</FlowDirectionLink>
`;

exports[`Form Flow Direction Link component should render with additional styles when className is passed 1`] = `
<FlowDirectionLink
  action="/SOME/URL"
  caseId="caseId123"
  className="test-class"
  disabled={false}
  dispatch={[MockFunction]}
  flowDirection="back"
  history={Object {}}
  label="Update"
  stageId="stageId123"
>
  <p>
    <Link
      className="govuk-body govuk-link test-class"
      disabled={false}
      onClick={[Function]}
      to="/SOME/URL"
    >
      <LinkAnchor
        className="govuk-body govuk-link test-class"
        disabled={false}
        href="/SOME/URL"
        navigate={[Function]}
        onClick={[Function]}
      >
        <a
          className="govuk-body govuk-link test-class"
          disabled={false}
          href="/SOME/URL"
          onClick={[Function]}
        >
          Update
        </a>
      </LinkAnchor>
    </Link>
  </p>
</FlowDirectionLink>
`;

exports[`Form Flow Direction Link component should render with correct label when passed 1`] = `null`;

exports[`Form Flow Direction Link component should render with default props 1`] = `
<FlowDirectionLink
  action="/SOME/URL"
  caseId="caseId123"
  disabled={false}
  dispatch={[MockFunction]}
  flowDirection="back"
  history={Object {}}
  label="Update"
  stageId="stageId123"
>
  <p>
    <Link
      className="govuk-body govuk-link"
      disabled={false}
      onClick={[Function]}
      to="/SOME/URL"
    >
      <LinkAnchor
        className="govuk-body govuk-link"
        disabled={false}
        href="/SOME/URL"
        navigate={[Function]}
        onClick={[Function]}
      >
        <a
          className="govuk-body govuk-link"
          disabled={false}
          href="/SOME/URL"
          onClick={[Function]}
        >
          Update
        </a>
      </LinkAnchor>
    </Link>
  </p>
</FlowDirectionLink>
`;
